GIG-71 Bug fix for last menu dropdown displaying out of screen

--- a/themes/bartik/css/layout.css
+++ b/themes/bartik/css/layout.css
@@ -324,6 +324,9 @@ ul, li {
     left:211px;
     top:0px;
 }
+#main-menu-nav li.last ul li:hover > ul{
+    left:-211px;
+}
 #main-menu-nav li ul ul li:hover > ul{
     display: block;
     position: absolute;
